{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Car",
            "id": "c231403f-0c6d-40e9-a9fc-d31d312d7ac3",
            "actions": [
                {
                    "name": "Nitro",
                    "type": "Button",
                    "id": "78da97da-5aac-4d06-a8d4-cdf29ed784bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateForward",
                    "type": "Button",
                    "id": "372ad4bc-1c03-454d-a90e-c534ebd7b200",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateBack",
                    "type": "Button",
                    "id": "78eb68be-8f11-4e04-b6e6-5a73ae1fde1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableAutoMove",
                    "type": "Button",
                    "id": "2f12ae59-b016-4624-9d8c-34f22396f40d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DisableAutoMove",
                    "type": "Button",
                    "id": "916bde01-77bf-4c28-92f8-af8475bf7cd3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ba1e3600-4509-466e-9f91-b481c521d3a2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Nitro",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57213c77-4317-48c4-84cc-51391ab17927",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ec857d9-56b0-46b2-861c-ff1921a01833",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "439797a9-18d4-450d-b854-daa6e83961c1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableAutoMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32150570-e401-4138-b300-6d023e7fdfe2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DisableAutoMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}